# kafka-harness

./: .env-default  .gitignore  Makefile  README.md  pyproject.toml
consumer/: __main__.py  config.py  consumer.py
deploy/kafka-server/: docker-compose.yml
producer/: __main__.py  config.py  producer.py
scripts/: kafka-consumer.sh  kafka-producer.sh  kafka-server-ctl.sh
tests/consumer/: test_consumer.py
tests/producer/: test_producer.py
