[tool.poetry]
name = "kafka-harness"
version = "0.1.0"
description = "Dev harness for running local Kafka, producer, consumer."
authors = ["Ayaz Somani <asomani@waveapps.com>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
