[tool.poetry]
name = "kafka-harness"
version = "0.2.0"
description = "Dev harness for running local Kafka, producer, consumer."
authors = ["Ayaz Somani <asomani@waveapps.com>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.9.2"
pytest = "^7.2.0"
Faker = "^15.1.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
